# smart-car

./: README.md  dwaRunNano.sh  dwa_module.py  flagSpin.py  how to run yf car.md  obmap.npy  ros_cmd_line_new.txt  sample_map.npy  test_2m2m_map.npy  to_delete
Cabinet/: camraPingPong.py
Cabinet/2pointMethod/: AutoParking.py  AutoParkingNew.py  cameraPingPong.py  dwa_config.yaml  yf_autoparking.py  yf_autoparkingNew.py  yf_node.py
IoT/: webServerStartAll.sh
IoT/demo/: index.html
IoT/demo/css/: demo.css
IoT/demo/js/: btnstate.js  controller.js  log.js
IoT/reactProject/: README.md
IoT/reactProject/newapp/: .eslintrc.json  package-lock.json  package.json
IoT/reactProject/newapp/log/: latest_list
IoT/reactProject/newapp/src/: App.css  App.js  EchoTopic.js  ManualDriving.js  ManualPage.js  PlayerEx.js  ROS.js  ROS.test.js  ROSContext.js  ReactNippleExample.js  ToggleConnect.js  VideoWindowExsample.js  VideoWindowLiveVideo.js  VideoWindowPlanner.js
IoT/ros_package/: README.md
IoT/ros_package/webvideoserver/: CMakeLists.txt  package.xml
IoT/ros_package/webvideoserver/include/web_video_server/: h264_streamer.h  image_streamer.h  jpeg_streamers.h  libav_streamer.h  multipart_stream.h  png_streamers.h  ros_compressed_streamer.h  vp8_streamer.h  vp9_streamer.h  web_video_server.h
IoT/ros_package/webvideoserver/src/: jpeg_streamers.cpp  png_streamers.cpp  pubSimpleImage.cpp  ros_compressed_streamer.cpp
ROS Package/ros2 package/yfcam/: package.xml  setup.cfg  setup.py
ROS Package/ros2 package/yfcam/yfcam/: dwa_module.py  motorSerial.py  node_test.py  potential_field_planning.py  sample_map.npy  sss.py  test.py  yf_GUI.py  yf_camera.py  yf_costmap.py  yf_dwa.py  yf_humanDetect.py  yf_node.py  yf_node_old.py  yf_pyCamera.py  yf_pyCostmap.py  yf_track.py
ROS Package/ros2 package/yfcam/yfcam/install/: local_setup.sh  setup.ps1  setup.sh
ROS Package/ros2 package/zed2ros/: CMakeLists.txt  package.xml
ROS Package/ros2 package/zed2ros/src/: main.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
ROS_Package/: README.md
ROS_Package/ros2_package/dwa/: CMakeLists.txt  package.xml
ROS_Package/ros2_package/dwa/include/: DWA_Planner.h
ROS_Package/ros2_package/dwa/src/: DWA_Planner.cpp  config.json  config.yaml  dwa_config.json  dwa_config.yaml  dwa_publisher.cpp  dwa_subscriber.cpp  dwachen.cpp  dynamic_window_approach.cpp  publisher_member_function.cpp  set_DWA_Param.py  test_dwa.cpp  yf_dwa.cpp
ROS_Package/ros2_package/dwa_fakegoal/include/: DWA_Planner.h
ROS_Package/ros2_package/dwa_fakegoal/src/: DWA_Planner.cpp  dwa_config.yaml  dwa_publisher.cpp  yf_dwa.cpp
ROS_Package/ros2_package/dwa_transform_traj/include/: DWA_Planner.h
ROS_Package/ros2_package/dwa_transform_traj/launch/: set_DWA_Param_launch.py
ROS_Package/ros2_package/dwa_transform_traj/src/: DWA_Planner.cpp  dwa_config.json  dwa_config.yaml  yf_dwa.cpp
ROS_Package/ros2_package/yfcam/: dwa_module.py  motorSerial.py  potential_field_planning.py  sample_map.npy  setup.py  yf_GUI.py  yf_dwa.py  yf_node.py
ROS_Package/ros2_package/yfcam/install/: setup.bash  setup.zsh
ROS_Package/ros2_package/yfcam/old version/: node_test.py  yf_costmap.py  yf_humanDetect.py  yf_pattenRecognition.py  yf_pyCamera.py  yf_pyCamera_old.py  yf_pyCostmap.py  yf_track.py
ROS_Package/ros2_package/yfcam/yfcam/: dwa_config.yaml  dwa_module.py  test_map.npy  yf_GUI.py  yf_dwa.py  yf_humanDetect.py  yf_node.py  yf_pattenRecognition.py  yf_pyCostmap.py
ROS_Package/ros2_package/zed2ros/src/: main.cpp  main_0920.cpp  main_0927.cpp  main_1004.cpp  main_1018.cpp
StateMachine/: test.plantuml
VPN/: REAMDME.md  Wireguard.conf
WiKi/: 大疆A板入门使用.md  如何在python环境中，使用yaml进行参数外置化.md
Wiki/: 如何使用shell指令，多terminal并行.md
camera/: README.md  dwa_module.py  ros cmd line (copy).txt  sss.py  subscriber_member_function.py  test_reference.py  track.py  yf_costmap.py  yf_humanDetect.py  yf_main.py  yf_pattenRecognition.py  从零开始安装yfcam.html
camera/yfcam/: dwa_module.py  motorSerial.py  subscriber_member_function.py  yf_camera.py  yf_costmap.py  yf_dwa.py  yf_humanDetect.py  yf_node.py  yf_pattenRecognition.py
camera/yfcam/old version/: publisher_member_function (really simple).py  publisher_member_function.py  subscriber_member_function(GoogleObjectDetectionAPI).py
camera/yifan/: config.yaml  real.txt  soll.txt  yfCamera.sh  yfServer.sh
mapping/: README.md
mapping/install_Librealsense/: buildLibrealsense.sh
mapping/install_RealSenseROS/: installRealSenseROS.sh
mapping/ros2/: README.md  realsense_d400.launch.py  rs_demo_rgbd.launch.py  rs_demo_t265.launch.py
module_dwa/: DWA_Planner.cpp  DWA_Planner.h  dwa_automobile.py  dwa_module.py  main.cpp  test_map_run.py
ros2web/demo/: index.html
ros2web/demo/js/: compresszedimage.js  controller.js  mjpegcanvas.js
serial_communication/: README.md
serial_communication/src/PC/serial_pc/: .gitigore  CMakeLists.txt  package.xml
serial_communication/src/PC/serial_pc/src/: .gitigore  RobotThread.cpp  RobotThread.h  main.cpp  mainwindow.cpp  mainwindow.h  serial_pc.pro  settingsdialog.cpp
serial_communication/src/PC/serial_pc/ui/: ui_mainwindow.h  ui_settingsdialog.h
serial_communication/src/PC/terminal/: README.md  console.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial_pc.pro  settingsdialog.cpp  settingsdialog.h  terminal.pro  terminal.pro.user.45ee5a5
serial_communication/src/motor_serial/: motorSerial.py  test_serial_with_plot.py  yf_node.py
serial_communication/src/pythonSerial/: motorSerial.py  test_serial.py
serial_communication/src/pythonSerial/test_serial_with_plot/: mainwindow.py  test_serial_with_plot.py
serial_communication/src/stm32/: README.md  comm.cpp  comm.h  main.c  stm32 - Verknüpfung.lnk
serial_communication/src/stm32/Inc/: stm32f4xx_it.h
serial_communication/src/stm32/MDK-ARM/: demo.uvguix.linyu  demo.uvguix.z003xevy  demo.uvoptx  demo.uvprojx  startup_stm32f427xx.lst
serial_communication/src/stm32/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
(+105 files in other folders)
