  <description>TODO: Package description</description>
  <maintainer email="gong@todo.todo">gong</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>OpenCV</depend>
    <depend>yaml-cpp</depend>
    <depend>jsoncpp</depend>
    <depend>DWA_Planner</depend>


  </export>
</package>